Fix the BOD build issue in a better way.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
 - script: |
     cd "Source code/Embedded/makefile-build"
     make clean
-    make complete EXTRA_CFLAGS=-DNEED_BOD
+    make complete
   displayName: 'Build'
 
 - publish: $(System.DefaultWorkingDirectory)/Source code/Embedded/makefile-build
